--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <html>
     <link rel="stylesheet" href="styles.css"> 
     <head>
-                <nav>
-            <div id="logo">
-                <img src="img/youtube-logo.png" alt="Youtube Company logo">
-            </div>
-            <input type="text" placeholder="Search your music"></input>
-            <button type="submit"></button>
-            <img src="img/notification-icon.png" alt="Notification Icon">
-            <img src="img/upload-icon.png" alt="Upload Icon">
-            <img src="img/avatar-icon.png" alt="Avatar Icon">
+        <nav>
+            <img src="img/youtube-logo.png" alt="Youtube Company logo" id="youtubelogo">
+            <input type="text" placeholder="Search your music" id="searchinput"></input>
+            <button type="submit" id="searchbutton"></button>
+            <img src="img/notification-icon.png" alt="Notification Icon" id="bell">
+            <img src="img/upload-icon.png" alt="Upload Icon" id="upload">
+            <img src="img/avatar-icon.png" alt="Avatar Icon" id="avatar">
         </nav>
     </head>
     <body>
