Added video and icons to body selector

--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
     <head>
         <nav>
             <img src="img/youtube-logo.png" alt="Youtube Company logo" id="youtubelogo">
-            <input type="text" placeholder="Search your music" id="searchinput"></input>
-            <button type="submit" id="searchbutton"></button>
+            <div class="search">
+                <input type="text" placeholder="Search your music" id="searchinput"></input>
+                <button style="width: auto; height: 24px;" type="submit" id="searchbutton">Search</button>
+            </div>
             <img src="img/notification-icon.png" alt="Notification Icon" id="bell">
             <img src="img/upload-icon.png" alt="Upload Icon" id="upload">
             <img src="img/avatar-icon.png" alt="Avatar Icon" id="avatar">
         </nav>
     </head>
     <body>
-        
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        <h3>Rick Astley - Never Gonna Give You Up (Video)
+       </h3>
+       <h4 color="gray">7.578.549 views</h4>
+       <img src="img/like-icon.png" alt="like Icon" style="width: 24px; height: 24px;">
+       <img src="img/dislike-icon.jpeg" alt="Dislike Icon" style="width: 24px; height: 24px;">
+       <img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;">
     </body>
 </html>
