Adjusted video size and added subscribe button

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
         </nav>
     </head>
     <body>
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <div class="video">
+        <iframe style="width: 1200px; height: 640px;" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
+        <div class="subvideo">
         <h3>Rick Astley - Never Gonna Give You Up (Video)
        </h3>
        <h4 color="gray">7.578.549 views</h4>
        <img src="img/like-icon.png" alt="like Icon" style="width: 24px; height: 24px;">
        <img src="img/dislike-icon.jpeg" alt="Dislike Icon" style="width: 24px; height: 24px;">
-       <img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;">
+       <button style="width: auto; height: 40px;" type="submit" id="sharebutton"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button>
+       <img src="img/avatar-icon.png" alt="Avatar" style="width: 24px; height: 24px;">
+       <button style="width: auto; height: 40px;" type="submit" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>
+    </div>
+    </div>
     </body>
 </html>
