Adjusting the subvideo elements

--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
     </head>
     <body>
         <div class="video">
-        <iframe style="width: 800; height: 400px;" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
+            <iframe style="width: 800; height: 400px;" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
         </div>
         <div class="subvideo">
-        <h3>Rick Astley - Never Gonna Give You Up (Video)
-       </h3>
-       <div id="weirdbuttons">
-        <div id="viewcount"><h4 color="gray">7.578.549 views</h4></div>
-        <div id="like"><img src="img/like-icon.png" alt="like Icon" style="width: 24px; height: 24px;"></div>
-        <div id="dislike"><img src="img/dislike-icon.jpeg" alt="Dislike Icon" style="width: 24px; height: 24px;"></div>
-        <div id="sharebutton"><button style="width: auto; height: 40px;" type="submit" id="sharebutton"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button></div>
-       </div>
-       <div class="break"></div>
+            <h3>Rick Astley - Never Gonna Give You Up (Video)
+            </h3>
+            <div class="weirdbuttons">
+                <div id="viewcount"><h4 color="gray">7.578.549 views</h4></div>
+                <div class="rightside">
+                <div id="like"><img src="img/like-icon.png" alt="like Icon" style="width: 24px; height: 24px;"></div>
+                <div id="dislike"><img src="img/dislike-icon.jpeg" alt="Dislike Icon" style="width: 24px; height: 24px;"></div>
+                <div id="sharebutton"><button style="width: auto; height: 40px;" type="submit" id="share"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button></div>
+            </div>
+            </div>
+       <div class="subvideo2">
        <img src="img/avatar-icon.png" alt="Avatar" style="width: 24px; height: 24px;">
        <button style="width: 100px; height: 40px;" type="submit" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>
+        </div>
     </div>
     </body>
 </html>
