--- a/index.html
+++ b/index.html
@@ -33,7 +33,32 @@
        <button style="width: 100px; height: 40px;" type="submit" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>
         </div>
     </div>
+    <div class="sidebar">
+        <div>
+            <img src="img/togetherforever.jpg" alt="Thumbnail for Together Forever" id="togetherforever">
+            <p>Rick Astley - Together Forever</p>
+            <p>102000000</p>
+        </div>
+        <div>
+            <img src="img/angelsonmyside.jpg" alt="Thumbnail for Angels on my Side" id="angelsonmyside">
+            <p>Rick Astley - Angels on my Side</p>
+            <p>7300000</p>
+        </div>
+        <div>
+            <img src="img/keepsinging.jpg" alt="Thumbnail for Keep Singing" id="keepsinging">
+            <p>Rick Astley - Keep Singing</p>
+            <p>5200000</p>
+        </div>
+        <div>
+            <img src="img/takemetoyourheart.jpg" alt="Thumbnail for Take me to your Heart" id="takemetoyourheart">
+            <p>Rick Astley - Take me to your Heart</p>
+            <p>14000000</p>
+        </div>
+        <div>
+            <img src="img/wheneveryouneedsomebody.jpg" alt="Thumbnail for Whenever you need somebody" id="wheneveryouneedsomebody">
+            <p>Rick Astley - Whenever you need Somebody</p>
+            <p>19000000</p>
+        </div>
+    </div>
     </body>
 </html>
-
-dokumente
