minor changes to html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </head>
     <body>
         <div class="video">
-            <iframe style="width: 800; height: 400px;" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
+            <iframe width="641" height="356" src="https://www.youtube.com/embed/uU6pHBs5rNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
         </div>
         <div class="subvideo">
             <h3>Rick Astley - Never Gonna Give You Up (Video)
