Organizing the side bar

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div class="thumbnail-1">
             <img src="img/togetherforever.png" alt="Thumbnail for Together Forever" id="togetherforever">
             <p>Rick Astley - Together Forever</p>
-            <p>102000000</p>
-        </div>
+            <p>102000000</p></div>
         <div class="thumbnail-2">
             <img src="img/angelsonmyside.png" alt="Thumbnail for Angels on my Side" id="angelsonmyside">
             <p>Rick Astley - Angels on my Side</p>
