Adjusting the different elements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="video-container">
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gxEPV4kolz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="iframe" src="https://www.youtube.com/embed/gxEPV4kolz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="subvideo">
             <h3>Rick Astley - Never Gonna Give You Up (Video)
@@ -37,27 +37,33 @@
     <div class="sidebar-container">
         <div class="thumbnail-1">
             <img src="img/togetherforever.png" alt="Thumbnail for Together Forever" id="togetherforever">
-            <p>Rick Astley - Together Forever</p>
+            <div class="bla1"><p>Rick Astley - Together Forever</p>
             <p>102000000</p></div>
+        </div>
         <div class="thumbnail-2">
             <img src="img/angelsonmyside.png" alt="Thumbnail for Angels on my Side" id="angelsonmyside">
-            <p>Rick Astley - Angels on my Side</p>
-            <p>7300000</p>
+            <div class="bla2"><p>Rick Astley - Angels on my Side</p>
+            <p>7300000</p></div>
         </div>
         <div class="thumbnail-3">
             <img src="img/keepsinging.png" alt="Thumbnail for Keep Singing" id="keepsinging">
-            <p>Rick Astley - Keep Singing</p>
-            <p>5200000</p>
+            <div class="bla3">
+                <p>Rick Astley - Keep Singing</p>
+                <p>5200000</p>
+            </div>
         </div>
         <div class="thumbnail-4">
             <img src="img/takemetoyourheart.png" alt="Thumbnail for Take me to your Heart" id="takemetoyourheart">
+            <div class="bla4">
             <p>Rick Astley - Take me to your Heart</p>
             <p>14000000</p>
+            </div>
         </div>
         <div class="thumbnail-5">
             <img src="img/wheneveryouneedsomebody.png" alt="Thumbnail for Whenever you need somebody" id="wheneveryouneedsomebody">
-            <p>Rick Astley - Whenever you need Somebody</p>
+            <div class="bla5"><p>Rick Astley - Whenever you need Somebody</p>
             <p>19000000</p>
+            </div>
         </div>
     </div>
     </body>
