Styling and replacing flex with float

--- a/index.html
+++ b/index.html
@@ -14,55 +14,56 @@
     </head>
     <body>
         <div class="video-container">
-        <div class="video">
-            <iframe id="iframe" src="https://www.youtube.com/embed/gxEPV4kolz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="subvideo">
-            <h3>Rick Astley - Never Gonna Give You Up (Video)
-            </h3>
-            <div class="weirdbuttons">
-                <div id="viewcount"><h4 color="gray">7.578.549 views</h4></div>
+            <div class="video">
+                <iframe id="iframe" src="https://www.youtube.com/embed/gxEPV4kolz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="subvideo">
+                <p class="leftside" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
+            </div>
+            <div class="subvideo2">
+                <div class="leftside">
+                    <p color="gray" id="viewcount">7.578.549 views</p>
+                </div>
                 <div class="rightside">
-                <div id="like"><img src="img/like-icon.png" alt="like Icon" style="width: 24px; height: 24px;"></div>
-                <div id="dislike"><img src="img/dislike-icon.jpeg" alt="Dislike Icon" style="width: 24px; height: 24px;"></div>
-                <div id="sharebutton"><button style="width: auto; height: 40px;" type="submit" id="share"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button></div>
-            </div>
-            </div>
-       <div class="subvideo2">
-       <img src="img/avatar-icon.png" alt="Avatar" style="width: 24px; height: 24px;">
-       <button style="width: 100px; height: 40px;" type="submit" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>
+                    <img src="img/like-icon.png" alt="like Icon" id="like">
+                    <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">        
+                    <button type="submit" id="share"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button> 
+                </div>
+            <div class="subvideo3">
+                <img src="img/avatar-icon.png" alt="Avatar" class="leftside" id="avatar" style="width: 24px; height: 24px;">
+                <button style="width: 100px; height: 40px;" type="submit" class="rightside" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>
         </div>
     </div>
 </div>
     <div class="sidebar-container">
         <div class="thumbnail-1">
             <img src="img/togetherforever.png" alt="Thumbnail for Together Forever" id="togetherforever">
-            <div class="bla1"><p>Rick Astley - Together Forever</p>
-            <p>102000000</p></div>
+            <div class="description"><p>Rick Astley - Together Forever</p>
+            <p>102 mil Views</p></div>
         </div>
         <div class="thumbnail-2">
             <img src="img/angelsonmyside.png" alt="Thumbnail for Angels on my Side" id="angelsonmyside">
-            <div class="bla2"><p>Rick Astley - Angels on my Side</p>
-            <p>7300000</p></div>
+            <div class="description"><p>Rick Astley - Angels on my Side</p>
+            <p>7.3 mil Views</p></div>
         </div>
         <div class="thumbnail-3">
             <img src="img/keepsinging.png" alt="Thumbnail for Keep Singing" id="keepsinging">
-            <div class="bla3">
+            <div class="description">
                 <p>Rick Astley - Keep Singing</p>
-                <p>5200000</p>
+                <p>5.2 mil Views</p>
             </div>
         </div>
         <div class="thumbnail-4">
             <img src="img/takemetoyourheart.png" alt="Thumbnail for Take me to your Heart" id="takemetoyourheart">
-            <div class="bla4">
+            <div class="description">
             <p>Rick Astley - Take me to your Heart</p>
-            <p>14000000</p>
+            <p>14 mil Views</p>
             </div>
         </div>
         <div class="thumbnail-5">
             <img src="img/wheneveryouneedsomebody.png" alt="Thumbnail for Whenever you need somebody" id="wheneveryouneedsomebody">
-            <div class="bla5"><p>Rick Astley - Whenever you need Somebody</p>
-            <p>19000000</p>
+            <div class="description"><p>Rick Astley - Whenever you need Somebody</p>
+            <p>19 mil Views</p>
             </div>
         </div>
     </div>
