made minor changes to page design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="video-container">
             <div class="video">
-                <iframe id="iframe" src="https://www.youtube.com/embed/gxEPV4kolz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="iframe" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="subvideo">
                 <p class="leftside" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
@@ -31,7 +31,8 @@
                 </div>
             <div class="subvideo3">
                 <img src="img/avatar-icon.png" alt="Avatar" class="leftside" id="avatar" style="width: 24px; height: 24px;">
-                <button style="width: 100px; height: 40px;" type="submit" class="rightside" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>
+                <!--<button  type="submit" class="rightside" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>-->
+                <input class="rightside" style="width: 75px; height: 24px;" type="image" src="img/subscribe-icon.png" /> 
         </div>
     </div>
 </div>
@@ -39,31 +40,31 @@
         <div class="thumbnail-1">
             <img src="img/togetherforever.png" alt="Thumbnail for Together Forever" id="togetherforever">
             <div class="description"><p>Rick Astley - Together Forever</p>
-            <p>102 mil Views</p></div>
+            <p id="views">102 mil Views</p></div>
         </div>
         <div class="thumbnail-2">
             <img src="img/angelsonmyside.png" alt="Thumbnail for Angels on my Side" id="angelsonmyside">
             <div class="description"><p>Rick Astley - Angels on my Side</p>
-            <p>7.3 mil Views</p></div>
+            <p id="views">7.3 mil Views</p></div>
         </div>
         <div class="thumbnail-3">
             <img src="img/keepsinging.png" alt="Thumbnail for Keep Singing" id="keepsinging">
             <div class="description">
                 <p>Rick Astley - Keep Singing</p>
-                <p>5.2 mil Views</p>
+                <p id="views">5.2 mil Views</p>
             </div>
         </div>
         <div class="thumbnail-4">
             <img src="img/takemetoyourheart.png" alt="Thumbnail for Take me to your Heart" id="takemetoyourheart">
             <div class="description">
             <p>Rick Astley - Take me to your Heart</p>
-            <p>14 mil Views</p>
+            <p id="views">14 mil Views</p>
             </div>
         </div>
         <div class="thumbnail-5">
             <img src="img/wheneveryouneedsomebody.png" alt="Thumbnail for Whenever you need somebody" id="wheneveryouneedsomebody">
             <div class="description"><p>Rick Astley - Whenever you need Somebody</p>
-            <p>19 mil Views</p>
+            <p id="views">19 mil Views</p>
             </div>
         </div>
     </div>
