Cleaning up the code

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
     <link rel="stylesheet" href="styles.css"> 
     <head>
+        <title>Youtube</title>
+    </head>
+    <body>
         <nav>
             <img src="img/youtube-logo.png" alt="Youtube Company logo" id="youtubelogo">
             <div class="search">
                 <input type="text" placeholder="Search your music" id="searchinput"></input>
                 <button style="width: auto; height: 24px;" type="submit" id="searchbutton">Search</button>
             </div>
-            <img src="img/notification-icon.png" alt="Notification Icon" id="bell">
-            <img src="img/upload-icon.png" alt="Upload Icon" id="upload">
-            <img src="img/avatar-icon.png" alt="Avatar Icon" id="avatar">
+            <img src="img/notification-icon.png" alt="Notification Icon" id="navitems">
+            <img src="img/upload-icon.png" alt="Upload Icon" id="navitems">
+            <img src="img/avatar-icon.png" alt="Avatar Icon" id="navitems">
         </nav>
-    </head>
-    <body>
         <div class="video-container">
             <div class="video">
                 <iframe id="iframe" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -20,7 +21,7 @@
             <div class="subvideo">
                 <p class="leftside" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
             </div>
-            <div class="subvideo2">
+            <div class="subvideo">
                 <div class="leftside">
                     <p color="gray" id="viewcount">7.578.549 views</p>
                 </div>
@@ -29,9 +30,8 @@
                     <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">        
                     <button type="submit" id="share"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button> 
                 </div>
-            <div class="subvideo3">
+            <div class="subvideo">
                 <img src="img/avatar-icon.png" alt="Avatar" class="leftside" id="avatar" style="width: 24px; height: 24px;">
-                <!--<button  type="submit" class="rightside" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>-->
                 <input class="rightside" style="width: 75px; height: 24px;" type="image" src="img/subscribe-icon.png" /> 
         </div>
     </div>
