--- a/index.html
+++ b/index.html
@@ -1,51 +1,61 @@
 <html>
-    <link rel="stylesheet" href="styles.css"> 
-    <head>
-        <nav>
-            <img src="img/youtube-logo.png" alt="Youtube Company logo" id="youtubelogo">
-            <div class="search">
-                <input type="text" placeholder="Search your music" id="searchinput"></input>
-                <button style="width: auto; height: 24px;" type="submit" id="searchbutton">Search</button>
+<link rel="stylesheet" href="styles.css">
+
+<head>
+    <nav>
+        <img src="img/youtube-logo.png" alt="Youtube Company logo" id="youtubelogo">
+        <div class="search">
+            <input type="text" placeholder="Search your music" id="searchinput"></input>
+            <button style="width: auto; height: 24px;" type="submit" id="searchbutton">Search</button>
+        </div>
+        <img src="img/notification-icon.png" alt="Notification Icon" id="bell">
+        <img src="img/upload-icon.png" alt="Upload Icon" id="upload">
+        <img src="img/avatar-icon.png" alt="Avatar Icon" id="avatar">
+    </nav>
+</head>
+
+<body>
+    <div class="video-container">
+        <div class="video">
+            <iframe id="iframe" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div class="subvideo">
+            <p class="leftside" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
+        </div>
+        <div class="subvideo2">
+            <div class="leftside">
+                <p color="gray" id="viewcount">7.578.549 views</p>
             </div>
-            <img src="img/notification-icon.png" alt="Notification Icon" id="bell">
-            <img src="img/upload-icon.png" alt="Upload Icon" id="upload">
-            <img src="img/avatar-icon.png" alt="Avatar Icon" id="avatar">
-        </nav>
-    </head>
-    <body>
-        <div class="video-container">
-            <div class="video">
-                <iframe id="iframe" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="rightside">
+                <img src="img/like-icon.png" alt="like Icon" id="like">
+                <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">
+                <button type="submit" id="share"><img src="img/share-icon.png" alt="Share Button"
+                        style="width: 24px; height: 24px;"></button>
             </div>
-            <div class="subvideo">
-                <p class="leftside" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
-            </div>
-            <div class="subvideo2">
-                <div class="leftside">
-                    <p color="gray" id="viewcount">7.578.549 views</p>
-                </div>
-                <div class="rightside">
-                    <img src="img/like-icon.png" alt="like Icon" id="like">
-                    <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">        
-                    <button type="submit" id="share"><img src="img/share-icon.png" alt="Share Button" style="width: 24px; height: 24px;"></button> 
-                </div>
             <div class="subvideo3">
-                <img src="img/avatar-icon.png" alt="Avatar" class="leftside" id="avatar" style="width: 24px; height: 24px;">
+                <img src="img/avatar-icon.png" alt="Avatar" class="leftside" id="avatar"
+                    style="width: 24px; height: 24px;">
                 <!--<button  type="submit" class="rightside" id="subscribebutton"><img src="img/subscribe-icon.png" alt="Subscribe Icon" style="width: auto; height: 24px;"></button>-->
-                <input class="rightside" style="width: 75px; height: 24px;" type="image" src="img/subscribe-icon.png" /> 
+                <input class="rightside" style="width: 75px; height: 24px;" type="image" src="img/subscribe-icon.png" />
+            </div>
         </div>
     </div>
-</div>
     <div class="sidebar-container">
         <div class="thumbnail-1">
             <img src="img/togetherforever.png" alt="Thumbnail for Together Forever" id="togetherforever">
-            <div class="description"><p>Rick Astley - Together Forever</p>
-            <p id="views">102 mil Views</p></div>
+            <div class="description">
+                <p>Rick Astley - Together Forever</p>
+                <p id="views">102 mil Views</p>
+            </div>
         </div>
         <div class="thumbnail-2">
             <img src="img/angelsonmyside.png" alt="Thumbnail for Angels on my Side" id="angelsonmyside">
-            <div class="description"><p>Rick Astley - Angels on my Side</p>
-            <p id="views">7.3 mil Views</p></div>
+            <div class="description">
+                <p>Rick Astley - Angels on my Side</p>
+                <p id="views">7.3 mil Views</p>
+            </div>
         </div>
         <div class="thumbnail-3">
             <img src="img/keepsinging.png" alt="Thumbnail for Keep Singing" id="keepsinging">
@@ -57,16 +67,19 @@
         <div class="thumbnail-4">
             <img src="img/takemetoyourheart.png" alt="Thumbnail for Take me to your Heart" id="takemetoyourheart">
             <div class="description">
-            <p>Rick Astley - Take me to your Heart</p>
-            <p id="views">14 mil Views</p>
+                <p>Rick Astley - Take me to your Heart</p>
+                <p id="views">14 mil Views</p>
             </div>
         </div>
         <div class="thumbnail-5">
-            <img src="img/wheneveryouneedsomebody.png" alt="Thumbnail for Whenever you need somebody" id="wheneveryouneedsomebody">
-            <div class="description"><p>Rick Astley - Whenever you need Somebody</p>
-            <p id="views">19 mil Views</p>
+            <img src="img/wheneveryouneedsomebody.png" alt="Thumbnail for Whenever you need somebody"
+                id="wheneveryouneedsomebody">
+            <div class="description">
+                <p>Rick Astley - Whenever you need Somebody</p>
+                <p id="views">19 mil Views</p>
             </div>
         </div>
     </div>
-    </body>
+</body>
+
 </html>
