Started adjusting the subvideo part

--- a/index.html
+++ b/index.html
@@ -26,21 +26,30 @@
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+    </div>
+    <div class="subvideo-container">
         <div class="subvideo">
-            <p class="leftside" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
+            <p class="" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
         </div>
-        <div class="subvideo">
-            <div class="leftside">
-                <p id="view-count">7.578.549 views</p>
+            <div class="break"></div>
+            <div class="subvideo3">
+                <div>
+                    <img src="img/avatar-icon.png" alt="Avatar" class="" id="avatar">
+                    <input class="" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
+                </div>
+                <div>
+                    <p id="view-count">7.578.549 views</p>
+                </div>
             </div>
-            <div class="rightside">
+            <div class="break"></div>
+            <div class="subvideo3">
+                <div>
+                    <input id="share-icon" type="image" src="img/share-icon.png" alt="Share Icon">
+                </div>
+                <div>
                 <img src="img/like-icon.png" alt="like Icon" id="like">
                 <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">
-                <input id="share-icon" type="image" src="img/share-icon.png" alt="Share Icon">
-            </div>
-            <div class="subvideo">
-                <img src="img/avatar-icon.png" alt="Avatar" class="leftside" id="avatar">
-                <input class="rightside" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
+                </div>
             </div>
         </div>
     </div>
