various changes to subvideo container

--- a/index.html
+++ b/index.html
@@ -20,39 +20,40 @@
         <img src="img/upload-icon.png" alt="Upload Icon" class="nav-items">
         <img src="img/avatar-icon.png" alt="Avatar Icon" class="nav-items">
     </nav>
+    <div class="main-body">
     <div class="video-container">
         <div class="video">
             <iframe id="iframe" src="https://www.youtube.com/embed/DLzxrzFCyOs"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-    </div>
-    <div class="subvideo-container">
-        <div class="subvideo">
-            <p class="" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
-        </div>
-            <div class="break"></div>
-            <div class="subvideo3">
-                <div>
-                    <img src="img/avatar-icon.png" alt="Avatar" class="" id="avatar">
-                    <input class="" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
+        <div class="subvideo-container">
+            <div class="subvideo">
+                <p class="" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
+            </div>
+                <div class="break"></div>
+                <div class="subvideo2">     
+                    <div>
+                        <img src="img/avatar-icon.png" alt="Avatar" class="" id="avatar">
+                        <input class="" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
+                    </div>           
+                    <div>
+                        <p id="view-count">7.578.549 views</p>
+                    </div>
                 </div>
-                <div>
-                    <p id="view-count">7.578.549 views</p>
+                <div class="break"></div>
+                <div class="subvideo3">
+                    <div>
+                        <input id="share-icon" type="image" src="img/share-icon.png" alt="Share Icon">
+                    </div>
+                    <div>
+                    <img src="img/like-icon.png" alt="like Icon" id="like">
+                    <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">
+                    </div>
                 </div>
             </div>
-            <div class="break"></div>
-            <div class="subvideo3">
-                <div>
-                    <input id="share-icon" type="image" src="img/share-icon.png" alt="Share Icon">
-                </div>
-                <div>
-                <img src="img/like-icon.png" alt="like Icon" id="like">
-                <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">
-                </div>
-            </div>
-        </div>
     </div>
+
     <div class="sidebar-container">
         <div class="thumbnail">
             <img src="img/togetherforever.png" alt="Thumbnail for Together Forever" class="song">
@@ -90,6 +91,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
