Applied grid to the subvideo container

--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
             <div class="subvideo">
                 <p class="" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
             </div>
-                <div class="break"></div>
                 <div class="subvideo2">     
-                    <div>
+
                         <img src="img/avatar-icon.png" alt="Avatar" class="" id="avatar">
+                        <p id="username">Farty McFartface</p>
                         <input class="" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
-                    </div>           
-                    <div>
                         <p id="view-count">7.578.549 views</p>
-                    </div>
+
                 </div>
                 <div class="break"></div>
                 <div class="subvideo3">
