Flexed out the sidebar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="subvideo2">     
 
                         <img src="img/avatar-icon.png" alt="Avatar" class="" id="avatar">
-                        <p id="username">Farty McFartface</p>
+                        <p id="username">Rick Astley</p>
                         <input class="" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
                         <p id="view-count">7.578.549 views</p>
 
