final changes to the page

--- a/index.html
+++ b/index.html
@@ -20,33 +20,29 @@
         <img src="img/upload-icon.png" alt="Upload Icon" class="nav-items">
         <img src="img/avatar-icon.png" alt="Avatar Icon" class="nav-items">
     </nav>
-    <div class="main-body">
-    <div class="video-container">
-        <div class="video">
+    <main>
+    <div class="video-container">        
             <iframe id="iframe" src="https://www.youtube.com/embed/DLzxrzFCyOs"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
+                allowfullscreen></iframe>        
         <div class="subvideo-container">
             <div class="subvideo">
                 <p class="" id="title">Rick Astley - Never Gonna Give You Up (Video)</p>
             </div>
-                <div class="subvideo2">     
-
+                <div class="subvideo2">                         
                         <img src="img/avatar-icon.png" alt="Avatar" class="" id="avatar">
                         <p id="username">Rick Astley</p>
-                        <input class="" id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">
-                        <p id="view-count">7.578.549 views</p>
-
+                        <input id="subscribe-icon" type="image" src="img/subscribe-icon.png" alt="Subscribe Icon">                                         
+                        <p id="view-count">7.578.549 views</p>                     
                 </div>
                 <div class="break"></div>
-                <div class="subvideo3">
+                <div class="subvideo3">                    
                     <div>
-                        <input id="share-icon" type="image" src="img/share-icon.png" alt="Share Icon">
+                        <input class="social-button" type="image" src="img/share-icon.png" alt="Share Icon">
                     </div>
                     <div>
-                    <img src="img/like-icon.png" alt="like Icon" id="like">
-                    <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike">
+                    <img src="img/like-icon.png" alt="like Icon" id="like" class="social-button">
+                    <img src="img/dislike-icon.jpeg" alt="Dislike Icon" id="dislike" class="social-button">
                     </div>
                 </div>
             </div>
@@ -89,7 +85,7 @@
             </div>
         </div>
     </div>
-</div>
+    </main>
 </body>
 
 </html>
